--- a/ecomsite/shop/templates/shop/index.html
+++ b/ecomsite/shop/templates/shop/index.html
@@ -89,13 +89,9 @@
                 <div class="card">
                     <img src="{{ product.image }}"  height="200" alt="" class="card-img-top">
                     <div class="card-body">
-                        <div class="card-title" id="nm{{product.id}}">
-                            {{ product.title }}
-                        </div>
+                        <div class="card-title" id="nm{{product.id}}">{{product.title}}</div>
 
-                        <div class="card-text">
-                            ${{ product.price }}
-                        </div>
+                        <div id="price{{product.id}}" class="card-text">{{ product.price }}</div>
 
                         <a href="/{{ product.id }}" class="btn btn-warning">View</a>
                         <button id="{{product.id}}"class="btn atc btn-warning">add to cart</button>
@@ -145,16 +141,22 @@
         console.log(item_id);
 
         if(cart[item_id] != undefined){
-            cart[item_id] = cart[item_id] + 1;
+            quantity = cart[item_id][0] + 1; 
+            cart[item_id][0] = quantity;
+            cart[item_id][2] = cart[item_id][2] + parseFloat(document.getElementById("price" + item_id).innerHTML);
+            
         }
         else{
-            cart[item_id] = 1;
+            quantity = 1;
+            price = parseFloat(document.getElementById("price" + item_id).innerHTML);
+            name = document.getElementById("nm" + item_id).innerHTML;
+            cart[item_id] = [quantity, name,price];
         }
 
         console.log("cart is:" + cart);
         localStorage.setItem("cart", JSON.stringify(cart));
         
-        var number_items = Object.keys(cart).length
+        var number_items = Object.keys(cart).length;
         document.getElementById("cart").innerHTML = "Cart(" + number_items + ")";
   
         });
@@ -163,16 +165,28 @@
         var cartString = "";
         cartString += "<h6>This is your Cart</h6>";
         var cartIndex= 1;
+        
+        let cartObject = JSON.parse(localStorage.getItem('cart'));
 
-        for(var x in cart){
-            cartString += cartIndex + ":";
-            console.log("x values is: " + x);
-            cartString += document.getElementById("nm" + x).innerHTML + "QTY:" + cart[x] + "</br>"; 
-            cartIndex += 1;
-            
+        for (item in cartObject){
+            let quantity = cartObject[item][0];
+            let name = cartObject[item][1];
+            cartString += cartObject[item][1] + " QTY: " + cartObject[item][0] + "</br>";
         }
 
-        cartString += "<a href='/shop/checkout' class='btn btn-warning' id='checkout'>Checkout</a>";
+
+
+
+
+        {% comment %} for(var x in cart){
+            cartString += cartIndex + ":";
+            console.log("x values is: " + x);
+            cartString += document.getElementById("nm" + x).innerHTML + "QTY:" + cart[x][0] + "</br>"; 
+            cartIndex += 1;
+            
+        } {% endcomment %}
+
+        cartString += "<a href='checkout' class='btn btn-primary' id='checkout'>Checkout</a>";
 
         document.getElementById("cart").setAttribute('data-content', cartString);
         var popoverTriggerList = [].slice.call(document.querySelectorAll('[id="cart"]'))
